2007-01-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-feature.h:
	* clutter/clutter-feature.c: Move the GL headers from the
	header file to the body.

	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c: Fix apidoc.

	* clutter/clutter-color.h:
	* clutter/clutter-color.c: Ditto.

2007-01-17  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c:
	* clutter/clutter-alpha.c:
	Renamed clutter_fixed_sin() to clutter_sinx() and 
	clutter_angle_sin() to clutter_sini(); added clutter_sqrtx()
	and clutter_sqrti(); added missing copyright.

	* clutter/clutter-behavior.c:
	replaced call to sqrt() with clutter_sqrti()

	* clutter/clutter-behavior-scale.c:
	(clutter_behaviour_scale_alpha_notify):
	Replaced floating point math with fixed point.

2007-01-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-feature.c: Use clutter_vblank_method() to
	get the VBlank method name from the environment variable OR
	the command line switch.

	(clutter_feature_do_init): Move the check on the features
	state here, to avoid an expensive function call, and inline
	the function.

	* clutter/clutter-fixed.c: Fix gtk-doc.

	* clutter/clutter-main.c: Add a --clutter-vblank command line
	switch controlling the VBlank method to be used: it overrides
	the CLUTTER_VBLANK environment variable.

	(pre_parse_hook), (clutter_init),
	(clutter_init_with_args): Move thread initialisation before
	type init, to avoid the warning that comes with newer GLib
	versions.

	* clutter/clutter-group.h:
	* clutter/clutter-group.c: Mark clutter_group_show_all() and
	clutter_group_hide_all() as deprecated.

2007-01-16  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	Minor tweaks

	* TODO:
	Sync up, mainly with 0.3 todo items

	* clutter/clutter-behaviour.c:
	* clutter/clutter-behaviour.h:
	clutter_behaviour_get_n_actors() / clutter_behaviour_get_nth_actor()
	Additions.

	* clutter/clutter-stage.c: (clutter_stage_realize):