@@ -2,3 +2,4 @@ Matthew Allum <mallum@o-hand.com> - primary authour
 Emmanuele Bassi <ebassi@o-hand.com> - python bindings, gobject/glib mastery
 Iain Holmes <iain@o-hand.com> - GTK Clutter widget
 Jorn Baayen <jorn@o-hand.com> - Gstreamer bits
+Tomas Frydrych <tf@o-hand.com> - Fixed point magic
